--- a/pages/appraisal/appraisal.wxss
+++ b/pages/appraisal/appraisal.wxss
@@ -1,56 +1,83 @@
 page {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
     background-color: #eeeeee;
 }
-.title{
-    padding-top: 3%;
-    font-weight: bold;
-}
-
 .description{
-    padding-top: 2%;
-}
-
-.add-img{
-    padding-top: 1%;
-    width: 165rpx;
-    height: 165rpx;
-    position: center;
+    box-sizing: border-box;
 }
 .context{
-    border-radius: 10px;
-    margin-top: 3%;
+    padding: 30rpx;
     background-color: #ffffff;
-    width: 100%;
-    height: 500rpx;
+    width: auto;
+    height: 210rpx;
 }
+
+textarea::-moz-placeholder{
+    font-size: 16px;
+    color: #aaaaaa;
+}
+
+.up_title{
+    font-size: 12px;
+    color: #aaaaaa;
+}
+
 .limitNum{
-    position: absolute;
-    bottom: 40rpx;
-    right: 26rpx;
+    position:absolute;
+    right: 10px;
+    bottom:0px;
     color: #888;
 }
+.ui_uploader_cell{
+    height: auto;
+    background-color: #ffffff;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+}
+.ui_uploader_cell .line{
+    margin: 30rpx auto;
+    width: 98%;
+    border-bottom: 1px solid #D7D7D7;
+}
+.add-img{
+    width: 165rpx;
+    height: 165rpx;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #F7F7F7;
+    font-size: 10px;
+    color: #797979;
+}
+.add-img .camera{
+    width: 55rpx;
+    height: 50rpx;
+}
 .sub-btn{
-    margin-top: 30%;
-    width: 30%;
+    margin-top: 200rpx;
+    margin-left: 120rpx;
+    margin-right: 120rpx;
+    margin-bottom: 60rpx;
+    width: 65%;
     padding: .3em .8em;
-    background: #e7e6e6;
-    border: 1px solid #446d88;
-    border-radius: .4em;
-    font-size: 105%;
+    border-radius: 18px;
+    font-size: 16px;
     line-height: 1.5;
 }
-
-
+.com-opt{
+    margin: 0 auto;
+    width: 100%;
+    height: 600rpx;
+    background-color: #ffffff;
+}
 .ui_uploader_cell {
     width: 100%;
     padding: 40rpx;
     box-sizing: border-box;
 }
 .ui_uploader_item{
-    float: left;
     position: relative;
     margin-right: 30rpx;
     margin-bottom: 30rpx;
