--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,4 +1,3 @@
-/**appraisal.wxss**/
 
 page {
   background: #f6f6f6;
@@ -7,16 +6,23 @@ page {
   justify-content: flex-start;
 }
 
+
 .img_swiper {
   width: 100%;
-  height: 600rpx;
+  height: 450rpx;
   display: block;
   position: relative;
   background: #f0f0f0;
 }
 .img-item {
   width: 100%;
-  height: inherit;
+  /*height: inherit;*/
+}
+
+.content{
+  width: 80%;
+  height: auto;
+  margin: 0 auto;
 }
 
 .text-title{
@@ -24,18 +30,35 @@ page {
   font-weight: bolder;
 }
 
+.text-content{
+  text-align:center;
+  letter-spacing:0.5px;
+}
+
 .btn{
+  padding-bottom: 60px;
   font-size: 16px;
 }
 
 .main-btn{
-  width: 30%;
-  padding: .3em .8em;
-  margin-top: 8%;
-  background: #e7e6e6;
-  border: 1px solid #446d88;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 80rpx;
+  margin-top: 4%;
   border-radius: .4em;
   font-size: 105%;
   line-height: 1.5;
+  margin-bottom: 50rpx;
 }
+
+.choose{
+  margin-top: 2%;
+}
+
+
+/*.container-1{*/
+/*    max-height: 450rpx;*/
+/*}*/
 
